<base href="/openseadragon/"/>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,12 @@ jobs:
       - run: flutter pub get
       - run: flutter build web --release
 
-      - run: ls
+      - run: |
+          ls
       - run: |
           cd build/web
           ls
+      - run: |
           cd assets
           ls
 
